--- a/static/cssFiles/styles.css
+++ b/static/cssFiles/styles.css
@@ -1,1 +1,211 @@
+@import url('https://fonts.googleapis.com/css2?family=Spline+Sans:wght@500&display=swap');
 
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-decoration: none;
+}
+
+.br {
+    margin-bottom: 15px;
+}
+
+.bottombar {
+    display: none;
+}
+
+body {
+    background-color: #181A1D;
+}
+
+html {
+    scroll-behavior: smooth;
+   }
+
+header {
+    /* padding: 0%; */
+    background-color: #181A1D;
+    /* width: 100%; */
+    /* height: 60px; */
+    box-shadow: 0px -10px 16px 4px;
+    padding-left: 25px;
+    padding-right: 2px;
+    display: flex;
+    align-items: center;
+    top: 0%;
+}
+
+li, a, button, p, p1, p2, p3, p4, p5, p6 {
+    font-family: 'Spline Sans', sans-serif;
+    font-weight: 500;
+    color : #edf0f1;
+    text-decoration: none;
+}
+h, h1, h2, h3, h4, h5, h6 {
+    font-family: 'Spline Sans', sans-serif;
+    font-weight: 1000;
+    color : #edf0f1;
+    text-decoration: none;
+    margin-left: 15px;
+}
+
+h1 {
+    font-size: 35px;
+}
+p1 {
+    font-size: 25px;
+    color: #9fa0a0;
+}
+
+
+button {
+    background-color: #1e847f;
+    border-radius: 8px;
+    border: none;
+    padding: 9px 25px;
+    box-shadow: -3px 3px 12px -3px #000000;
+    transition: 0.3s;
+    outline: none;
+    border: none;
+    cursor: pointer;
+
+    font-size: 80%; 
+    margin-right: 10px; 
+    margin-left: 25px; 
+    font-weight: 1000; 
+    transform: translate(0px, -2px); 
+    padding-bottom: 11.5px;
+}
+
+button:hover {
+    background-color: #2a6b68;
+}
+button text {
+    font-family: "Montserrat", sans-serif;
+}
+
+.nav_links li {
+    display: inline-flex;
+    margin: -2px;
+}
+.nav_links a:not(#special) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.nav_links a:hover:not(#special) {
+    background-color: #000000;
+    transition: 0.3s ease 0s;
+}
+
+.nav_links .active {
+    color: #046CEB !important;
+}
+
+input[type="submit"] {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 1000;
+    background-color: #090A0B;
+    border-radius: 8px;
+    border: none;
+    padding: 9px 25px;
+    box-shadow: -3px 3px 12px 2px #000000;
+    transition: 0.3s;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    color: #edf0f1;
+}
+input[type="submit"]:hover {
+    background-color: #000000;
+}
+
+input[type="text"] {
+    background-color: #EDF0F1;
+    border-radius: 15px;
+    border: none;
+    padding: 9px 25px;
+    transition: 0.3s;
+    outline: none;
+    border: none;
+    width: 509px;
+    height: 54px;
+    color: #000000;
+    font-size: 17.5px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 1000;
+}
+input[type="text"]::placeholder {
+    color:#636363
+}
+
+input[type="password"] {
+    background-color: #EDF0F1;
+    border-radius: 15px;
+    border: none;
+    padding: 9px 25px;
+    transition: 0.3s;
+    outline: none;
+    border: none;
+    width: 509px;
+    height: 54px;
+    color: #000000;
+    font-size: 17.5px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 1000;
+}
+input[type="password"]::placeholder {
+    color:#636363
+}
+
+input[type="email"] {
+    background-color: #EDF0F1;
+    border-radius: 15px;
+    border: none;
+    padding: 9px 25px;
+    transition: 0.3s;
+    outline: none;
+    border: none;
+    width: 509px;
+    height: 54px;
+    color: #000000;
+    font-size: 17.5px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 1000;
+}
+input[type="email"]::placeholder {
+    color:#636363
+}
+
+input[type="checkbox"] {
+    width: 20px;
+    height: 20px;
+    outline: none;
+    border: none;
+    background-color: #EDF0F1;
+}
+input[type="checkbox"]:checked ~ .checkmark {
+    background-color: #07B2F6;
+}
+
+select {
+    background-color: #EDF0F1;
+    border-radius: 15px;
+    border: none;
+    padding: 9px 25px;
+    transition: 0.3s;
+    outline: none;
+    border: none;
+    width: 509px;
+    height: 54px;
+    color: #000000;
+    font-size: 17.5px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 1000;
+}
